syntax = "proto3";

package warcraft;

import "warcraft/character-type.proto";

option go_package = "github.com/ToxicToast/Azkaban-Go/libs/proto/warcraft;warcraft";

message GetCharactersResponse {
  repeated Character data = 1;
  int64 total = 2;
}